2006-05-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-tab-button-menu-commands): Disable same items if
	`w3m-tab-button-menu-current-buffer' is nil.
	(w3m-tab-button-menu2): New function.

	* w3m-e21.el (top): Add the variables and function to avoid
	byte-compile warnings.
	(w3m-tab-drag-mouse-function): Support drag & drop to out of the
	frame. Don't call `bury-buffer'.
	(w3m-tab-click-mouse-function): Don't call `bury-buffer'.
	(w3m-tab-double-click-mouse1-function): new function.
	(w3m-tab-double-click-mouse2-function): Ditto.
	(w3m-tab-make-keymap): Add some methods.

	* w3m-e23.el (top): Add the variables and function to avoid
	byte-compile warnings.
	(w3m-tab-drag-mouse-function): Support drag & drop to out of the
	frame. Don't call `bury-buffer'.
	(w3m-tab-click-mouse-function): Don't call `bury-buffer'.
	(w3m-tab-double-click-mouse1-function): new function.
	(w3m-tab-double-click-mouse2-function): Ditto.
	(w3m-tab-make-keymap): Add some methods.

	* w3m.el (w3m-tab-button-menu-commands): Change position
	some items.

2006-05-24  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Change
	content-start and content-end for game group.

2006-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-widget-type-convert-widget): New function.

	* w3m.el (w3m-home-page, w3m-new-session-url)
	(w3m-uri-replace-alist): Use it.

	* w3m-dtree.el (w3m-dtree-indent-strings, w3m-dtree-stop-strings):
	Use it.

	* w3m-symbol.el (w3m-symbol-custom-type): Use it.

2006-05-21  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* w3m.el (autoload): `w3m-bookmark-view-new-sessiont' ->
	`w3m-bookmark-view-new-session'.

2006-05-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-home-page): Rewrite :convert-widget function.
	(w3m-new-session-url): Ditto.

2006-05-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-new-session-url): Doc fix; improve custom type.
	(w3m-new-session-in-background): Doc fix.
